src/test/deca/syntax/parser/invalid/inst_expr_print_bracket_not_closed.deca
// Test de parser, les parenthèses du print ne sont pas fermées

{
    int x = 5;
    print(x ;
}